[package]
name = "tiny-neo-space"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tiny-neo-space"
path = "src/main.rs"

[dependencies]
macroquad = { version = "0.4", features = ["log-rs"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2

[package.metadata.wasm-pack.profile.release]
wasm-opt = false